[#131] con @spuente Agregar plugin de PMD para Gradle y correrlo antes de las pruebas y el build