@@ -2,14 +2,19 @@ package ec.gob.senescyt.usuario.validators;
 
 import org.apache.commons.lang.math.NumberUtils;
 
+import java.util.ArrayList;
+import java.util.List;
+
 public class CedulaValidator {
 
-    static final int MULT = 2;
-    static final int TOTAL_PROVINCES = 24;
+    private static final int MULTIPLICADOR = 2;
+    private static final int TOTAL_PROVINCIAS = 24;
+    private static final int LONGITUD_REQUERIDA = 10;
+    private static final int LIMITE_DECENA = 10;
 
     public boolean isValidaCedula(final String cedula) {
         // si no tiene 10 digitos es invalida
-        if (cedula.length() != 10) {
+        if (cedula.length() != LONGITUD_REQUERIDA) {
             return false;
         }
 
@@ -17,11 +22,7 @@ public class CedulaValidator {
             return false;
         }
 
-        String province = cedula.substring(0, 2);
-
-        // si sus dos primeros digitos son invalidos
-        int numeroProvincia = Integer.parseInt(province);
-        if (numeroProvincia <= 0 || numeroProvincia > TOTAL_PROVINCES) {
+        if(!isValidaProvincia(cedula)) {
             return false;
         }
 
@@ -31,11 +32,17 @@ public class CedulaValidator {
             return false;
         }
 
-        if (verificadorPrivado.equals(new Integer(9))) {
+        if (verificadorPrivado.equals(Integer.valueOf(9))) {
             return verificarPersonaJuridica(cedula);
         }
 
         return verificarPersonaNatural(cedula);
+    }
+
+    private boolean isValidaProvincia(String cedula) {
+        String provincia = cedula.substring(0, 2);
+        int numeroProvincia = Integer.parseInt(provincia);
+        return !(numeroProvincia <= 0 || numeroProvincia > TOTAL_PROVINCIAS);
     }
 
     private static boolean verificarPersonaNatural(String cedula) {
@@ -48,9 +55,9 @@ public class CedulaValidator {
 
         for (int i = 0; i < totalValidNumbers; i++) {
             int digit = Integer.parseInt(cedula.charAt(i) + "");
-            if (i % 2 == 0) {// si son pares
-                int product = digit * MULT;
-                if (product > 9) {
+            if (esPar(i)) {// si son pares
+                int product = digit * MULTIPLICADOR;
+                if (product >= LIMITE_DECENA) {
                     product = product - 9;
                 }
                 totalEven += product;
@@ -64,10 +71,10 @@ public class CedulaValidator {
         String totalString = String.valueOf(total + 10);
 
         // se verifica la decena superior
-        if (totalString.length() > 1) {
+        if (esMultiDigito(totalString)) {
             int first = Integer.parseInt(totalString.charAt(0) + "");
             total = Integer.parseInt(first + "0") - total;
-            if (total == 10) {
+            if (total == LIMITE_DECENA) {
                 total = 0;
             }
         }
@@ -80,22 +87,30 @@ public class CedulaValidator {
         return result == verifier;
     }
 
+    private static boolean esMultiDigito(String totalString) {
+        return totalString.length() > 1;
+    }
+
+    private static boolean esPar(int numero) {
+        return numero % 2 == 0;
+    }
+
     private static boolean verificarPersonaJuridica(String cedula) {
         int[] coeficientes = { 4, 3, 2, 7, 6, 5, 4, 3, 2 };
         int constante = 11;
 
         // verifica que el último dígito de la cédula sea válido
-        int[] d = new int[10];
+        List<Integer> digitos = new ArrayList<>();
         int suma = 0;
 
         // Asignamos el string a un array
         for (int i = 0; i < cedula.length(); i++) {
-            d[i] = Integer.parseInt(cedula.charAt(i) + "");
+            digitos.add(Integer.parseInt(cedula.charAt(i) + ""));
         }
 
-        for (int i = 0; i < d.length - 1; i++) {
-            d[i] = d[i] * coeficientes[i];
-            suma += d[i];
+        for (int i = 0; i < digitos.size() - 1; i++) {
+            digitos.set(i, digitos.get(i) * coeficientes[i]);
+            suma += digitos.get(i);
         }
 
         int aux, resp;
@@ -105,6 +120,6 @@ public class CedulaValidator {
 
         resp = (resp == 10) ? 0 : resp;
 
-        return resp == d[9];
+        return resp == digitos.get(9);
     }
 }
